Add contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -4,4 +4,86 @@ title: Contacts
 permalink: /contacts/
 ---
 
-Address and phone go here!
+<div class="content-wrapper">
+    <section class="info">
+        <section class="opening-hours">
+            <h3>Opening Hours</h3>
+
+            <ul>
+                <li>
+                    <span class="day">Monday:</span>
+                    <span class="line"></span>
+                    <span class="hours">9:00 - 19:00</span>
+                </li>
+                <li>
+                    <span class="day">Tuesday:</span>
+                    <span class="line"></span>
+                    <span class="hours">9:00 - 19:00</span>
+                </li>
+                <li>
+                    <span class="day">Wednesday:</span>
+                    <span class="line"></span>
+                    <span class="hours">9:00 - 19:00</span>
+                </li>
+                <li>
+                    <span class="day">Thursday:</span>
+                    <span class="line"></span>
+                    <span class="hours">9:00 - 19:00</span>
+                </li>
+                <li>
+                    <span class="day">Friday:</span>
+                    <span class="line"></span>
+                    <span class="hours">9:00 - 19:00</span>
+                </li>
+                <li>
+                    <span class="day">Saturday:</span>
+                    <span class="line"></span>
+                    <span class="hours">10:00 - 17:00</span>
+                </li>
+                <li>
+                    <span class="day">Sunday:</span>
+                    <span class="line"></span>
+                    <span class="hours">10:00 - 17:00</span>
+                </li>
+            </ul>
+        </section>
+
+        <section class="central-office">
+            <h3>Central Office</h3>
+
+            <ul>
+                <li>
+                    <i class="fas fa-phone-volume"></i>
+                    0(800) 890-90-609
+                </li>
+                <li>
+                    <i class="fas fa-envelope"></i>
+                    info@ovardov-air.com
+                </li>
+                <li>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <address>29 Nicolas str, New York, 987597-50</address>
+                </li>
+            </ul>
+        </section>
+
+        <section class="media">
+            <img src="../images/logbook.jpg" alt="Logbook">
+        </section>
+    </section>
+</div>
+
+<section class="contact-us">
+    <div class="content-wrapper">
+        <h3>Send Message</h3>
+
+        <form action="#">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your email">
+
+            <textarea name="message" id="message" placeholder="Message"></textarea>
+
+            <input type="submit">
+        </form>
+    </div>
+</section>
