Update image url

--- a/destinations.html
+++ b/destinations.html
@@ -11,7 +11,7 @@ main-nav: 1
         <li>
             <a href="#">
                 {{ destination.title }}
-                <img src="{{site.baseurl}}{{destination.image}}" alt="{{destination.title}}">
+                <img src="{{destination.image}}" alt="{{destination.title}}">
             </a>
         </li>
         {% endfor %}
