--- a/destinations.html
+++ b/destinations.html
@@ -10,7 +10,7 @@ main-nav: 1
         {% for destination in site.destinations %}
         <li>
             <a href="#">
-                {{ destination.title }}
+                <span class="destination-name">{{ destination.title }}</span>
                 <img src="{{destination.image}}" alt="{{destination.title}}">
             </a>
         </li>
