Update section structure

--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,9 @@ main-nav: 1
 <div class="content-wrapper">
     <section class="info">
         <section class="opening-hours">
-            <h3>Opening Hours</h3>
+            <header>
+                <h3>Opening Hours</h3>
+            </header>
 
             <ul>
                 <li>
@@ -50,7 +52,9 @@ main-nav: 1
         </section>
 
         <section class="central-office">
-            <h3>Central Office</h3>
+            <header>
+                <h3>Central Office</h3>
+            </header>
 
             <ul class="contact-info">
                 <li>
@@ -97,7 +101,9 @@ main-nav: 1
 
 <section class="contact-us">
     <div class="content-wrapper">
-        <h3>Send Message</h3>
+        <header>
+            <h3>Send Message</h3>
+        </header>
 
         <form action="#">
             <input type="text" placeholder="Your name">
