--- a/our-fleet.html
+++ b/our-fleet.html
@@ -8,7 +8,10 @@ main-nav: 1
 <div class="content-wrapper">
     <section class="fleet-card">
         <section class="description">
-            <h3 class="airplane-name">A380</h3>
+            <header>
+                <h3 class="airplane-name"> Airbus A380</h3>
+            </header>
+
             <p class="airplane-info">The double-deck A380 makes excellent use of its space to offer passengers attainable luxury. With enough room to install stylish first-class suites.</p>
         </section>
 
@@ -23,14 +26,20 @@ main-nav: 1
         </section>
 
         <section class="description">
-            <h3 class="airplane-name">A340</h3>
+            <header>
+                <h3 class="airplane-name">Airbus A340</h3>
+            </header>
+
             <p class="airplane-info">The A340 provides some of the most comfortable environments aloft, well suited for long- and ultra-long haul flights of up to 18 hours.</p>
         </section>
     </section>
 
     <section class="fleet-card">
         <section class="description">
-            <h3 class="airplane-name">A330</h3>
+            <header>
+                <h3 class="airplane-name">Airbus A330</h3>
+            </header>
+
             <p class="airplane-info">The A330 is a more efficient aircraft that will generate savings through its reduced fuel burn. It includes latest-generation Rolls-Royce Trent 7000 engines.</p>
         </section>
 
@@ -45,14 +54,20 @@ main-nav: 1
         </section>
 
         <section class="description">
-            <h3 class="airplane-name">A321</h3>
+            <header>
+                <h3 class="airplane-name">Airbus A321</h3>
+            </header>
+
             <p class="airplane-info">The Airbus 321 engine provides a 20% reduction in fuel consumption per seat, 50% noise and pollution reduction compared to previous generation aircraft.</p>
         </section>
     </section>
 
     <section class="fleet-card">
         <section class="description">
-            <h3 class="airplane-name">A220</h3>
+            <header>
+                <h3 class="airplane-name">Airbus A220</h3>
+            </header>
+
             <p class="airplane-info">The A220 Family is ideal for hot-and-high and city-centre airport operations. Wide seats combined with ample overhead storage.</p>
         </section>
 
@@ -67,14 +82,20 @@ main-nav: 1
         </section>
 
         <section class="description">
-            <h3 class="airplane-name">Boeing 787</h3>
+            <header>
+                <h3 class="airplane-name">Boeing 787</h3>
+            </header>
+
             <p class="airplane-info">The Boeing 787 can fly up to 7,635 nautical miles (14,140 km), while reducing fuel use and emissions by 20 to 25 percent compared to older airplanes.</p>
         </section>
     </section>
 
     <section class="fleet-card">
         <section class="description">
-            <h3 class="airplane-name">Boeing 767</h3>
+            <header>
+                <h3 class="airplane-name">Boeing 767</h3>
+            </header>
+
             <p class="airplane-info">We love the Boeing 767 because of its usefulness on short haul, high-density routes. Routes such as Chicago to New York feature the aircraft heavily.</p>
         </section>
 
