Add slide in animation

--- a/our-fleet.html
+++ b/our-fleet.html
@@ -6,7 +6,7 @@ main-nav: 1
 ---
 
 <div class="content-wrapper">
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-right">
         <section class="description">
             <header>
                 <h3 class="airplane-name"> Airbus A380</h3>
@@ -20,7 +20,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-left">
         <section class="media">
             <img src="../images/airbus-a340.jpg" alt="Airbus A340">
         </section>
@@ -34,7 +34,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-right">
         <section class="description">
             <header>
                 <h3 class="airplane-name">Airbus A330</h3>
@@ -48,7 +48,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-left">
         <section class="media">
             <img src="../images/airbus-a321.jpg" alt="Airbus A321">
         </section>
@@ -62,7 +62,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-right">
         <section class="description">
             <header>
                 <h3 class="airplane-name">Airbus A220</h3>
@@ -76,7 +76,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-left">
         <section class="media">
             <img src="../images/boeing-787.jpg" alt="Boeing 787">
         </section>
@@ -90,7 +90,7 @@ main-nav: 1
         </section>
     </section>
 
-    <section class="fleet-card">
+    <section class="fleet-card slide-from-right">
         <section class="description">
             <header>
                 <h3 class="airplane-name">Boeing 767</h3>
