Add content in home page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,133 @@ layout: main
 home: true
 ---
 
-<section>
+<section class="sky">
+    <section class="clouds">
+        <img src="./images/clouds.png" alt="Clouds">
+    </section>
+    <section class="fog">
+        <img src="./images/fog.png" alt="Fog">
+    </section>
+    <section class="wing">
+        <img src="./images/wing.png" alt="Wing">
+    </section>
+</section>
 
-    <header>
-        <h2>Home</h2>
-    </header>
+<section class="services">
+    <div class="content-wrapper">
+        <header>
+            <h3>Services</h3>
+        </header>
 
+        <section class="services-info">
+            <section class="media">
+                <img src="./images/transfer.jpg" alt="">
+            </section>
+
+            <ul>
+                <li>
+                    <i class="fas fa-first-aid"></i>
+                    <h5>Health Insurance</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-plane-arrival"></i>
+                    <h5>Many Airports</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-calendar-check"></i>
+                    <h5>Online Check-In</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-stopwatch"></i>
+                    <h5>Always On Time</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-hotel"></i>
+                    <h5>Hotels</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-car-side"></i>
+                    <h5>Car Rentals</h5>
+                </li>
+            </ul>
+        </section>
+    </div>
+</section>
+
+
+<section class="faq">
+    <div class="content-wrapper">
+        <header>
+            <h3>Frequently Asked Questions</h3>
+        </header>
+
+        <ul>
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">Can I cancel my booking online?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">Yes, depending on the type of ticket you hold, you’ll be able to cancel your booking.</p>
+            </li>
+
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">What should I do if my baggage is delayed?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">If you can't find your baggage at the terminal, you should visit the baggage services desk at the airport. This is usually found in the customs hall near the baggage claim area.</p>
+            </li>
+
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">How do I change details of my trip online?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">You can use Manage a Booking to make changes to most aspects of your booking and add extras to your flight before you fly.</p>
+            </li>
+
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">Can my service animal or pet travel with me?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">Certain service animals are allowed to travel in the cabin on Emirates flights, subject to a number of conditions. </p>
+            </li>
+
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">How can I receive updates about Emirates' offers and services?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">You can subscribe to receive our Special Offers email.</p>
+            </li>
+
+            <li class="questions-wrapper">
+                <p class="question-and-icons">
+                    <span class="question">What is a mobile boarding pass and how do I use it?</span>
+                    <i class="fas fa-plus open"></i>
+                    <i class="fas fa-minus close"></i>
+                </p>
+                <p class="answer">You can now receive a mobile boarding pass for your Emirates flight on your web-enabled phone or mobile device. In order to use a mobile boarding pass, you need an active internet connection on your mobile device. You can receive a link to your mobile boarding pass either via email or SMS.</p>
+            </li>
+        </ul>
+
+        <section class="read-more">
+            <button>
+                Read More
+                <i class="fas fa-arrow-right"></i>
+            </button>
+        </section>
+    </div>
 </section>
 
