Add popular destination to home page and move services in about us

--- a/about-us.html
+++ b/about-us.html
@@ -5,10 +5,51 @@ permalink: /about-us/
 main-nav: 1
 ---
 
-<section>
 
-    <header>
-        <h2>Even more about the project</h2>
-    </header>
+<!-- Services -->
+<section class="services">
+    <div class="content-wrapper">
+        <header>
+            <h3>Services</h3>
+        </header>
 
+        <section class="services-info">
+            <section class="media">
+                <img src="../images/transfer.jpg" alt="">
+            </section>
+
+            <ul>
+                <li>
+                    <i class="fas fa-first-aid"></i>
+                    <h5>Health Insurance</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-plane-arrival"></i>
+                    <h5>Many Airports</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-calendar-check"></i>
+                    <h5>Online Check-In</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-stopwatch"></i>
+                    <h5>Always On Time</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-hotel"></i>
+                    <h5>Hotels</h5>
+                </li>
+
+                <li>
+                    <i class="fas fa-car-side"></i>
+                    <h5>Car Rentals</h5>
+                </li>
+            </ul>
+        </section>
+    </div>
 </section>
+
