Update css to scss

--- a/about-us.html
+++ b/about-us.html
@@ -14,9 +14,9 @@ main-nav: 1
         </header>
 
         <section class="services-info">
-            <section class="media">
-                <img src="../images/transfer.jpg" alt="">
-            </section>
+            <div class="media">
+                <img src="../images/transfer.jpg" alt="Transfer">
+            </div>
 
             <ul>
                 <li>
