--- a/index.html
+++ b/index.html
@@ -354,58 +354,51 @@ home: true
         </header>
 
         <section class="questions-list">
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">Can I cancel my booking online?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
 
                 <p class="answer">Yes, depending on the type of ticket you hold, you’ll be able to cancel your booking.</p>
             </section>
 
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">What should I do if my baggage is delayed?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
+
                 <p class="answer">If you can't find your baggage at the terminal, you should visit the baggage services desk at the airport. This is usually found in the customs hall near the baggage claim area.</p>
             </section>
 
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">How do I change details of my trip online?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
+
                 <p class="answer">You can use Manage a Booking to make changes to most aspects of your booking and add extras to your flight before you fly.</p>
             </section>
 
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">Can my service animal or pet travel with me?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
+
                 <p class="answer">Certain service animals are allowed to travel in the cabin on Emirates flights, subject to a number of conditions. </p>
             </section>
 
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">How can I receive updates about Emirates' offers and services?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
+
                 <p class="answer">You can subscribe to receive our Special Offers email.</p>
             </section>
 
-            <section class="questions-wrapper">
-                <header class="question-and-icons">
+            <section class="question-and-answer">
+                <header class="question-wrapper">
                     <h4 class="question">What is a mobile boarding pass and how do I use it?</h4>
-                    <i class="fas fa-plus open"></i>
-                    <i class="fas fa-minus close"></i>
                 </header>
+
                 <p class="answer">You can now receive a mobile boarding pass for your Emirates flight on your web-enabled phone or mobile device. In order to use a mobile boarding pass, you need an active internet connection on your mobile device. You can receive a link to your mobile boarding pass either via email or SMS.</p>
             </section>
         </section>
