--- a/contact-us.html
+++ b/contact-us.html
@@ -3,102 +3,103 @@ layout: main
 title: Contact Us
 permalink: /contact-us/
 main-nav: 1
-contact-us: true
 ---
 
-<div class="content-wrapper">
-    <section class="info">
-        <section class="opening-hours">
-            <header>
-                <h3>Opening Hours</h3>
-            </header>
+<section class="contact-us-description">
+    <div class="content-wrapper">
+        <section class="info">
+            <section class="opening-hours">
+                <header>
+                    <h3>Opening Hours</h3>
+                </header>
 
-            <ul>
-                <li>
-                    <span class="day">Monday:</span>
-                    <span class="line"></span>
-                    <span class="hours">9:00 - 19:00</span>
-                </li>
-                <li>
-                    <span class="day">Tuesday:</span>
-                    <span class="line"></span>
-                    <span class="hours">9:00 - 19:00</span>
-                </li>
-                <li>
-                    <span class="day">Wednesday:</span>
-                    <span class="line"></span>
-                    <span class="hours">9:00 - 19:00</span>
-                </li>
-                <li>
-                    <span class="day">Thursday:</span>
-                    <span class="line"></span>
-                    <span class="hours">9:00 - 19:00</span>
-                </li>
-                <li>
-                    <span class="day">Friday:</span>
-                    <span class="line"></span>
-                    <span class="hours">9:00 - 19:00</span>
-                </li>
-                <li>
-                    <span class="day">Saturday:</span>
-                    <span class="line"></span>
-                    <span class="hours">10:00 - 17:00</span>
-                </li>
-                <li>
-                    <span class="day">Sunday:</span>
-                    <span class="line"></span>
-                    <span class="hours">10:00 - 17:00</span>
-                </li>
-            </ul>
+                <ul>
+                    <li>
+                        <span class="day">Monday:</span>
+                        <span class="line"></span>
+                        <span class="hours">9:00 - 19:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Tuesday:</span>
+                        <span class="line"></span>
+                        <span class="hours">9:00 - 19:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Wednesday:</span>
+                        <span class="line"></span>
+                        <span class="hours">9:00 - 19:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Thursday:</span>
+                        <span class="line"></span>
+                        <span class="hours">9:00 - 19:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Friday:</span>
+                        <span class="line"></span>
+                        <span class="hours">9:00 - 19:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Saturday:</span>
+                        <span class="line"></span>
+                        <span class="hours">10:00 - 17:00</span>
+                    </li>
+                    <li>
+                        <span class="day">Sunday:</span>
+                        <span class="line"></span>
+                        <span class="hours">10:00 - 17:00</span>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="central-office">
+                <header>
+                    <h3>Central Office</h3>
+                </header>
+
+                <ul class="contact-info">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-phone-volume"></i>
+                            0(800) 890-90-609
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-envelope"></i>
+                            info@ovardov-air.com
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <address>29 Nicolas str, New York, 987597-50</address>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="social-buttons">
+                    <li>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="media">
+                <img src="../images/logbook.jpg" alt="Logbook">
+            </section>
         </section>
-
-        <section class="central-office">
-            <header>
-                <h3>Central Office</h3>
-            </header>
-
-            <ul class="contact-info">
-                <li>
-                    <a href="#">
-                        <i class="fas fa-phone-volume"></i>
-                        0(800) 890-90-609
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-envelope"></i>
-                        info@ovardov-air.com
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <address>29 Nicolas str, New York, 987597-50</address>
-                    </a>
-                </li>
-            </ul>
-            
-            <ul class="social-buttons">
-                <li>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-            </ul>
-        </section>
-
-        <section class="media">
-            <img src="../images/logbook.jpg" alt="Logbook">
-        </section>
-    </section>
-</div>
+    </div>
+</section>
 
 <section class="contact-us">
     <div class="content-wrapper">
