--- a/contact-us.html
+++ b/contact-us.html
@@ -113,7 +113,7 @@ main-nav: 1
 
             <textarea name="message" id="message" placeholder="Message"></textarea>
 
-            <input type="submit">
+            <input type="submit" value="Submit">
         </form>
     </div>
 </section>
